@@ -58,3 +58,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 COPYING;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/notification_banner.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_banner.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/notification_command.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_command.h;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/notification_core.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/notification_core.h;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/notification_foldercheck.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_foldercheck.h;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_lcdproc.h;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_pixbuf.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_pixbuf.h;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/notification_plugin.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_plugin.h;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/notification_popup.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_popup.h;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/notification_prefs.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/notification_prefs.h;  ) > 0.11cvs8.patchset
 ( cvs diff -u -r 1.1.2.81 -r 1.1.2.82 configure.ac;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/notification_core.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_lcdproc.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_lcdproc.h;  ) > 0.11cvs9.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/notification_lcdproc.c;  ) > 0.11cvs10.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/notification_lcdproc.c;  ) > 0.11cvs11.patchset
